--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -260,56 +260,79 @@
 			<div id="sidebar" class="nav-collapse ">
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu">
-					<li class="active"><a class="" href="index.html"> <i
+					<li class="active"><a class="" th:href ="@{/index}"> <i
 							class="icon_house_alt"></i> <span>Dashboard</span>
 					</a></li>
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_document_alt"></i> <span>Forms</span> <span
+							class="icon_document_alt"></i> <span>Vehicles</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" href="form_component.html">Form Elements</a></li>
-							<li><a class="" href="form_validation.html">Form
-									Validation</a></li>
+							
+							<li><a class="" th:href="@{/vehicles}">Vehicle Data</a></li>
+							<li><a class="" th:href="@{/vehiclemaintenance}">Maintenance</a></li>
+						
+							<li><a class="" th:href="@{/vehiclemovements}">Movements</a></li>
+							<li><a class="" th:href="@{/vehiclehires}">Hires</a></li>
+						
 						</ul></li>
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_desktop"></i> <span>UI Fitures</span> <span
+							class="icon_desktop"></i> <span>Parameters</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" href="general.html">Elements</a></li>
-							<li><a class="" href="buttons.html">Buttons</a></li>
-							<li><a class="" href="grids.html">Grids</a></li>
-						</ul></li>
-					<li><a class="" href="widgets.html"> <i
-							class="icon_genius"></i> <span>Widgets</span>
-					</a></li>
-					<li><a class="" href="chart-chartjs.html"> <i
-							class="icon_piechart"></i> <span>Charts</span>
-
-					</a></li>
+							<li><a class="" th:href="@{/vehiclemakes}">Vehicle Make</a></li>
+							<li><a class="" th:href="@{/vehicletypes}">Vehicle Types</a></li>
+							<li><a class="" th:href="@{/vehiclemodels}">Vehicle Model</a></li>
+							<li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+						</ul>
+					</li>
+					
+					<li class="sub-menu"><a href="javascript:;" class=""> <i
+							class="icon_desktop"></i> <span>People</span> <span
+							class="menu-arrow arrow_carrot-right"></span>
+					</a>
+						<ul class="sub">
+							<li><a class="" th:href = "@{/employees}">Employees</a></li>
+							<li><a class="" th:href = "@{/clients}">Clients</a></li>
+							<li><a class="" th:href = "@{/suppliers}">Suppliers</a></li>
+							<li><a class="" th:href = "@{/contacts}">Contacts</a></li>
+							<li><a class="" th:href = "@{/users}">Users</a></li>
+							
+						</ul>
+					</li>
+					
+					
+					<li class="sub-menu"><a href="javascript:;" class=""> <i
+							class="icon_desktop"></i> <span>HR Setting</span> <span
+							class="menu-arrow arrow_carrot-right"></span>
+					</a>
+						<ul class="sub">
+							<li><a class="" th:href = "@{/jobtitles}">Job Titles</a></li>
+							<li><a class="" th:href = "@{/employeetypes}">Employee Types</a></li>	
+						</ul>
+					</li>
 
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_table"></i> <span>Tables</span> <span
+							class="icon_table"></i> <span>Accounts</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" href="basic_table.html">Basic Table</a></li>
-						</ul></li>
+							<li><a class="" th:href = "@{/invoices}">Invoices</a></li>
+							<li><a class="" th:href = "@{/invoicestatus}">Invoices Status Values</a></li>
+						</ul>
+					</li>
 
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_documents_alt"></i> <span>Pages</span> <span
+							class="icon_table"></i> <span>Globals</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" href="profile.html">Profile</a></li>
-							<li><a class="" href="login.html"><span>Login
-										Page</span></a></li>
-							<li><a class="" href="contact.html"><span>Contact
-										Page</span></a></li>
-							<li><a class="" href="blank.html">Blank Page</a></li>
-							<li><a class="" href="404.html">404 Error</a></li>
-						</ul></li>
+							<li><a class="" th:href = "@{/countries}">Countries</a></li>
+							<li><a class="" th:href = "@{/states}">States</a></li>
+							<li><a class="" th:href = "@{/locations}">Locations</a></li>
+						</ul>
+					</li>
 
 				</ul>
 				<!-- sidebar menu end-->
