--- a/src/main/resources/templates/forms/StateForm.html
+++ b/src/main/resources/templates/forms/StateForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th ="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Bootstrap Example</title>
 <meta charset="utf-8">
@@ -17,11 +17,11 @@
 		<h2>Save State</h2>
 		<form class="form-horizontal" th:object="${state}"
 			th:action="@{/states/addNew}" method="post">
-			
+
 			<!-- hidden input id -->
-			<input type="hidden" th:field="*{id}" class="form-control"
-						name="id" id="id" />
-			
+			<input type="hidden" th:field="*{id}" class="form-control" name="id"
+				id="id" />
+
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="capital">Capital:</label>
 				<div class="col-sm-10">
@@ -42,11 +42,19 @@
 
 			<div class="form-group">
 
-				<label class="control-label col-sm-2" for="countryid">Country ID:</label>
+				<label class="control-label col-sm-2" for="country">Country(Select
+					Country):</label>
 				<div class="col-sm-10">
 
-					<input type="text" th:field="*{countryid}" class="form-control"
-						name="countryid" id="countryid">
+					<!-- <input type="text" th:field="*{countryid}" class="form-control"
+						name="countryid" id="countryid"> --> 
+						
+					<select class="form-control" name = "countryid" id="countryid" th:field="*{countryid}">
+						<option value="select" >Select Country</option>
+						<option th:each = "country : ${countries}"
+					        	th:value="${country.id}"
+					        	th:text= "${country.description}"></option>
+					</select>
 				</div>
 			</div>
 			<div class="form-group">
