adding header and sidebar dynamicaly in other pages wherver required

--- a/src/main/resources/templates/forms/StateForm.html
+++ b/src/main/resources/templates/forms/StateForm.html
@@ -42,8 +42,7 @@
 
 			<div class="form-group">
 
-				<label class="control-label col-sm-2" for="country">Country(Select
-					Country):</label>
+				<label class="control-label col-sm-2" for="country">Country:</label>
 				<div class="col-sm-10">
 
 					<!-- <input type="text" th:field="*{countryid}" class="form-control"
