--- a/src/main/resources/templates/forms/StateForm.html
+++ b/src/main/resources/templates/forms/StateForm.html
@@ -25,7 +25,6 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="capital">Capital:</label>
 				<div class="col-sm-10">
-
 					<input type="text" th:field="*{capital}" class="form-control"
 						name="capital" id="capital">
 				</div>
@@ -36,12 +35,10 @@
 				<div class="col-sm-10">
 					<input type="text" th:field="*{code}" class="form-control"
 						name="code" id="code">
-
 				</div>
 			</div>
 
 			<div class="form-group">
-
 				<label class="control-label col-sm-2" for="country">Country:</label>
 				<div class="col-sm-10">
 
@@ -49,7 +46,7 @@
 						name="countryid" id="countryid"> --> 
 						
 					<select class="form-control" name = "countryid" id="countryid" th:field="*{countryid}">
-						<option value="select" >Select Country</option>
+						<option value="" >Select Country</option>
 						<option th:each = "country : ${countries}"
 					        	th:value="${country.id}"
 					        	th:text= "${country.description}"></option>
@@ -59,7 +56,6 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="name">Name:</label>
 				<div class="col-sm-10">
-
 					<input type="text" th:field="*{name}" class="form-control"
 						name="name" id="name">
 				</div>
@@ -68,21 +64,17 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="details">Details:</label>
 				<div class="col-sm-10">
-
 					<input type="text" th:field="*{details}" class="form-control"
 						name="details" id="details">
 				</div>
 			</div>
 
 			<div class="form-group">
-
 				<div class="col-sm-10">
 					<label class="control-label col-sm-2" for="details"></label>
 					<button type="submit" class="btn btn-primary">Save</button>
-
 				</div>
 			</div>
-
 		</form>
 	</div>
 
