Spring Security with role USER added and logout implemented

--- a/src/main/resources/templates/forms/CountryForm.html
+++ b/src/main/resources/templates/forms/CountryForm.html
@@ -26,7 +26,7 @@
 				<label class="control-label col-sm-2" for="capital">Capital:</label>
 				<div class="col-sm-10">
 
-					<input type="text" th:field="*{capital}" class="form-control"
+					<input required type="text" th:field="*{capital}" class="form-control"
 						name="capital" id="capital">
 				</div>
 			</div>
@@ -34,7 +34,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="code">Code:</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{code}" class="form-control"
+					<input required type="text" th:field="*{code}" class="form-control"
 						name="code" id="code">
 
 				</div>
@@ -45,7 +45,7 @@
 				<label class="control-label col-sm-2" for="continent">Continent:</label>
 				<div class="col-sm-10">
 
-					<input type="text" th:field="*{continent}" class="form-control"
+					<input required type="text" th:field="*{continent}" class="form-control"
 						name="continent" id="continent">
 				</div>
 			</div>
@@ -53,7 +53,7 @@
 				<label class="control-label col-sm-2" for="description">Description:</label>
 				<div class="col-sm-10">
 
-					<input type="text" th:field="*{description}" class="form-control"
+					<input required type="text" th:field="*{description}" class="form-control"
 						name="description" id="description">
 				</div>
 			</div>
@@ -62,7 +62,7 @@
 				<label class="control-label col-sm-2" for="nationality">Nationality:</label>
 				<div class="col-sm-10">
 
-					<input type="text" th:field="*{nationality}" class="form-control"
+					<input required type="text" th:field="*{nationality}" class="form-control"
 						name="nationality" id="nationality">
 				</div>
 			</div>
