--- a/src/main/resources/templates/forms/StateForm.html
+++ b/src/main/resources/templates/forms/StateForm.html
@@ -19,13 +19,13 @@
 			th:action="@{/states/addNew}" method="post">
 
 			<!-- hidden input id -->
-			<input type="hidden" th:field="*{id}" class="form-control" name="id"
+			<input type="hidden" readonly th:field="*{id}" class="form-control" name="id"
 				id="id" />
 
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="capital">Capital:</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{capital}" class="form-control"
+					<input type="text" required th:field="*{capital}" class="form-control"
 						name="capital" id="capital">
 				</div>
 			</div>
@@ -33,7 +33,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="code">Code:</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{code}" class="form-control"
+					<input type="text" required th:field="*{code}" class="form-control"
 						name="code" id="code">
 				</div>
 			</div>
@@ -45,7 +45,7 @@
 					<!-- <input type="text" th:field="*{countryid}" class="form-control"
 						name="countryid" id="countryid"> --> 
 						
-					<select class="form-control" name = "countryid" id="countryid" th:field="*{countryid}">
+					<select  required class="form-control" name = "countryid" id="countryid" th:field="*{countryid}">
 						<option value="" >Select Country</option>
 						<option th:each = "country : ${countries}"
 					        	th:value="${country.id}"
@@ -56,7 +56,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="name">Name:</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{name}" class="form-control"
+					<input type="text" required th:field="*{name}" class="form-control"
 						name="name" id="name">
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="details">Details:</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{details}" class="form-control"
+					<input type="text" required th:field="*{details}" class="form-control"
 						name="details" id="details">
 				</div>
 			</div>
