--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -224,7 +224,7 @@
 					<li class="dropdown"><a data-toggle="dropdown"
 						class="dropdown-toggle" href="#"> <span class="profile-ava">
 								<img alt="" src="img/avatar1_small.jpg">
-						</span> <span class="username">Jenifer Smith</span> <b class="caret"></b>
+						</span> <span class="username">badri</span> <b class="caret"></b>
 					</a>
 						<ul class="dropdown-menu extended logout">
 							<div class="log-arrow-up"></div>
@@ -234,12 +234,8 @@
 							<li><a href="#"><i class="icon_clock_alt"></i> Timeline</a>
 							</li>
 							<li><a href="#"><i class="icon_chat_alt"></i> Chats</a></li>
-							<li><a href="login.html"><i class="icon_key_alt"></i>
+							<li><a th:href="@{/logout}"><i class="icon_key_alt"></i>
 									Log Out</a></li>
-							<li><a href="documentation.html"><i class="icon_key_alt"></i>
-									Documentation</a></li>
-							<li><a href="documentation.html"><i class="icon_key_alt"></i>
-									Documentation</a></li>
 						</ul></li>
 					<!-- user login dropdown end -->
 				</ul>
