--- a/src/main/resources/templates/forms/login.html
+++ b/src/main/resources/templates/forms/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th ="http://www.thymeleaf.org">
 <head>
-<title>Login Form || Spring Boot Application</title>
+<title>Login to Proceed || Spring Boot Application</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
@@ -19,6 +19,13 @@
       background-color : gray;
       color : white;
       margin-top : 100px;
+      text-align : center;
+   }
+   
+   .to_register {
+     text-decoration: none;
+     color : orangered;
+     margin-left : 15px;
    }
   
 </style>
@@ -26,13 +33,17 @@
 <body>
 
 	<div class="container">
-		<h2>Login To Proceed.</h2>
+		<h2>Login To Proceed</h2>
+		<div style = "text-align : center; font-size : 20px; color : green; font-weight : bold;">
+		     <span style= " padding : 5px;" th:utext = "${loginMessage}"></span>
+		</div>
+		
 		<form class="form-horizontal"
 			th:action="@{/login}" method="post">
 			
 			<!-- hidden input id -->
 			<!-- <input type="hidden" class="form-control"
-						name="id" id="id" /> -->
+						name="id" id="id" /> -->			
 			
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="username">Username:</label>
@@ -53,7 +64,10 @@
 			<div class="form-group">
 				<div class="col-sm-10">
 					<label class="control-label col-sm-2" for="login"></label>
-					<button type="submit" class="btn btn-primary">Login</button>
+					<button type="submit" class="btn btn-primary">Sign In</button>
+					<a th:href="@{/register}"
+					   class= "to_register"
+					> Don't Have Account? <strong>Register</strong></a>
 				</div>
 			</div>
 		</form>
