--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -50,7 +50,7 @@
 			<div id="sidebar" class="nav-collapse ">
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu">
-					<li class="active"><a class="" th:href ="@{/index}"> <i
+					<li class="active"><a class="" th:href ="@{/admin/index}"> <i
 							class="icon_house_alt"></i> <span>Dashboard</span>
 					</a></li>
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
@@ -59,11 +59,11 @@
 					</a>
 						<ul class="sub">
 							
-							<li><a class="" th:href="@{/vehicles}">Vehicle Data</a></li>
-							<li><a class="" th:href="@{/vehiclemaintenance}">Maintenance</a></li>
+							<li><a class="" th:href="@{/admin/vehicles}">Vehicle Data</a></li>
+							<li><a class="" th:href="@{/admin/vehiclemaintenance}">Maintenance</a></li>
 						
-							<li><a class="" th:href="@{/vehiclemovements}">Movements</a></li>
-							<li><a class="" th:href="@{/vehiclehires}">Hires</a></li>
+							<li><a class="" th:href="@{/admin/vehiclemovements}">Movements</a></li>
+							<li><a class="" th:href="@{/admin/vehiclehires}">Hires</a></li>
 						
 						</ul></li>
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
@@ -71,10 +71,10 @@
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href="@{/vehiclemakes}">Vehicle Make</a></li>
-							<li><a class="" th:href="@{/vehicletypes}">Vehicle Types</a></li>
-							<li><a class="" th:href="@{/vehiclemodels}">Vehicle Model</a></li>
-							<li><a class="" th:href="@{/vehiclestatus}">Status Values</a></li>
+							<li><a class="" th:href="@{/admin/vehiclemakes}">Vehicle Make</a></li>
+							<li><a class="" th:href="@{/admin/vehicletypes}">Vehicle Types</a></li>
+							<li><a class="" th:href="@{/admin/vehiclemodels}">Vehicle Model</a></li>
+							<li><a class="" th:href="@{/admin/vehiclestatus}">Status Values</a></li>
 						</ul>
 					</li>
 					
@@ -83,11 +83,11 @@
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/employees}">Employees</a></li>
-							<li><a class="" th:href = "@{/clients}">Clients</a></li>
-							<li><a class="" th:href = "@{/suppliers}">Suppliers</a></li>
-							<li><a class="" th:href = "@{/contacts}">Contacts</a></li>
-							<li><a class="" th:href = "@{/users}">Users</a></li>
+							<li><a class="" th:href = "@{/admin/employees}">Employees</a></li>
+							<li><a class="" th:href = "@{/admin/clients}">Clients</a></li>
+							<li><a class="" th:href = "@{/admin/suppliers}">Suppliers</a></li>
+							<li><a class="" th:href = "@{/admin/contacts}">Contacts</a></li>
+							<li><a class="" th:href = "@{/admin/users}">Users</a></li>
 							
 						</ul>
 					</li>
@@ -98,8 +98,8 @@
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/jobtitles}">Job Titles</a></li>
-							<li><a class="" th:href = "@{/employeetypes}">Employee Types</a></li>	
+							<li><a class="" th:href = "@{/admin/jobtitles}">Job Titles</a></li>
+							<li><a class="" th:href = "@{/admin/employeetypes}">Employee Types</a></li>	
 						</ul>
 					</li>
 
@@ -108,8 +108,8 @@
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/invoices}">Invoices</a></li>
-							<li><a class="" th:href = "@{/invoicestatus}">Invoices Status Values</a></li>
+							<li><a class="" th:href = "@{/admin/invoices}">Invoices</a></li>
+							<li><a class="" th:href = "@{/admin/invoicestatus}">Invoices Status Values</a></li>
 						</ul>
 					</li>
 
@@ -118,9 +118,9 @@
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/countries}">Countries</a></li>
-							<li><a class="" th:href = "@{/states}">States</a></li>
-							<li><a class="" th:href = "@{/locations}">Locations</a></li>
+							<li><a class="" th:href = "@{/admin/countries}">Countries</a></li>
+							<li><a class="" th:href = "@{/admin/states}">States</a></li>
+							<li><a class="" th:href = "@{/admin/locations}">Locations</a></li>
 						</ul>
 					</li>
 
