--- a/src/main/resources/templates/forms/NormalUserLogin.html
+++ b/src/main/resources/templates/forms/NormalUserLogin.html
@@ -33,7 +33,7 @@
 <body>
 
 	<div class="container">
-		<h2>Login To Proceed</h2>
+		<h2>Login To Proceed(Normal User)</h2>
 		<div style = "text-align : center; font-size : 20px; color : green; font-weight : bold;">
 		     <span style= " padding : 5px;" th:utext = "${loginMessage}"></span>
 		</div>
