--- a/src/main/resources/templates/forms/register.html
+++ b/src/main/resources/templates/forms/register.html
@@ -33,9 +33,9 @@
 <body>
 
 	<div class="container">
-		<h2>Create Your Account First</h2>
+		<h2>Create Your Account First(Admin)</h2>
 		<form class="form-horizontal"
-			th:action="@{/users/register}" method="post">
+			th:action="@{/admin/register}" method="post">
 			
 			<!-- hidden input id -->
 			<!-- <input type="hidden" class="form-control"
@@ -83,7 +83,7 @@
 				<div class="col-sm-10">
 					<label class="control-label col-sm-2"></label>
 					<button type="submit" class="btn btn-primary">Create Account</button>
-						<a th:href="@{/login}"
+						<a th:href="@{/admin/login}"
 					   class= "to_login"
 					> Already Have Account? <strong>Login</strong></a>
 				</div>
