--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -241,7 +241,7 @@
 							<li><a href="#"><i class="icon_clock_alt"></i> Timeline</a>
 							</li>
 							<li><a href="#"><i class="icon_chat_alt"></i> Chats</a></li>
-							<li><a th:href="@{/logout}"><i class="icon_key_alt"></i>
+							<li><a th:href="@{/admin/logout}"><i class="icon_key_alt"></i>
 									Log Out</a></li>
 						</ul></li>
 					<!-- user login dropdown end -->
