Unnecessary files from the aplication

--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -54,7 +54,7 @@
 			</div>
 
 			<!--logo start-->
-			<a th:href="@{/index}" class="logo">Vehicles <span class="lite">Management
+			<a th:href="@{/admin}" class="logo">Vehicles <span class="lite">Management
 					Admin</span></a>
 			<!--logo end-->
 
