--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -53,57 +53,18 @@
 					<li class="active"><a class="" th:href ="@{/admin/index}"> <i
 							class="icon_house_alt"></i> <span>Dashboard</span>
 					</a></li>
-					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_document_alt"></i> <span>Vehicles</span> <span
-							class="menu-arrow arrow_carrot-right"></span>
-					</a>
-						<ul class="sub">
-							
-							<li><a class="" th:href="@{/admin/vehicles}">Vehicle Data</a></li>
-							<li><a class="" th:href="@{/admin/vehiclemaintenance}">Maintenance</a></li>
 						
-							<li><a class="" th:href="@{/admin/vehiclemovements}">Movements</a></li>
-							<li><a class="" th:href="@{/admin/vehiclehires}">Hires</a></li>
-						
-						</ul></li>
-					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_desktop"></i> <span>Parameters</span> <span
-							class="menu-arrow arrow_carrot-right"></span>
-					</a>
-						<ul class="sub">
-							<li><a class="" th:href="@{/admin/vehiclemakes}">Vehicle Make</a></li>
-							<li><a class="" th:href="@{/admin/vehicletypes}">Vehicle Types</a></li>
-							<li><a class="" th:href="@{/admin/vehiclemodels}">Vehicle Model</a></li>
-							<li><a class="" th:href="@{/admin/vehiclestatus}">Status Values</a></li>
-						</ul>
-					</li>
-					
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
 							class="icon_desktop"></i> <span>People</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
 							<li><a class="" th:href = "@{/admin/employees}">Employees</a></li>
-							<li><a class="" th:href = "@{/admin/clients}">Clients</a></li>
-							<li><a class="" th:href = "@{/admin/suppliers}">Suppliers</a></li>
-							<li><a class="" th:href = "@{/admin/contacts}">Contacts</a></li>
 							<li><a class="" th:href = "@{/admin/users}">Users</a></li>
-							
-						</ul>
-					</li>
-					
-					
-					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_desktop"></i> <span>HR Setting</span> <span
-							class="menu-arrow arrow_carrot-right"></span>
-					</a>
-						<ul class="sub">
-							<li><a class="" th:href = "@{/admin/jobtitles}">Job Titles</a></li>
-							<li><a class="" th:href = "@{/admin/employeetypes}">Employee Types</a></li>	
 						</ul>
 					</li>
 
-					<li class="sub-menu"><a href="javascript:;" class=""> <i
+					<!-- <li class="sub-menu"><a href="javascript:;" class=""> <i
 							class="icon_table"></i> <span>Accounts</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
@@ -111,7 +72,7 @@
 							<li><a class="" th:href = "@{/admin/invoices}">Invoices</a></li>
 							<li><a class="" th:href = "@{/admin/invoicestatus}">Invoices Status Values</a></li>
 						</ul>
-					</li>
+					</li> -->
 
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
 							class="icon_table"></i> <span>Globals</span> <span
@@ -149,7 +110,7 @@
 	<script src="assets/jquery-easy-pie-chart/jquery.easy-pie-chart.js"></script>
 	<script src="js/owl.carousel.js"></script>
 	<!-- jQuery full calendar -->
-	<
+	
 	<script src="js/fullcalendar.min.js"></script>
 	<!-- Full Google Calendar - Calendar -->
 	<script src="assets/fullcalendar/fullcalendar/fullcalendar.js"></script>
