CRUD operations for the Country, State, Location fully completed, Endpoints renamed and CRUD operations for the  Post also completed

--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -54,7 +54,7 @@
 			</div>
 
 			<!--logo start-->
-			<a th:href="@{/admin}" class="logo">Vehicles <span class="lite">Management
+			<a th:href="@{/admin}" class="logo">Post App <span class="lite">
 					Admin</span></a>
 			<!--logo end-->
 
