--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -50,17 +50,16 @@
 			<div id="sidebar" class="nav-collapse ">
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu">
-					<li class="active"><a class="" th:href ="@{/admin/index}"> <i
+					<li class="active"><a class="" th:href ="@{/admin}"> <i
 							class="icon_house_alt"></i> <span>Dashboard</span>
 					</a></li>
 						
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
-							class="icon_desktop"></i> <span>People</span> <span
+							class="icon_desktop"></i> <span>Activities</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/admin/employees}">Employees</a></li>
-							<li><a class="" th:href = "@{/admin/users}">Users</a></li>
+							<li><a class="" th:href = "@{/posts}">Posts</a></li>
 						</ul>
 					</li>
 
@@ -79,9 +78,9 @@
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/admin/countries}">Countries</a></li>
-							<li><a class="" th:href = "@{/admin/states}">States</a></li>
-							<li><a class="" th:href = "@{/admin/locations}">Locations</a></li>
+							<li><a class="" th:href = "@{/countries}">Countries</a></li>
+							<li><a class="" th:href = "@{/states}">States</a></li>
+							<li><a class="" th:href = "@{/locations}">Locations</a></li>
 						</ul>
 					</li>
 
