--- a/src/main/resources/templates/forms/StateForm.html
+++ b/src/main/resources/templates/forms/StateForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Bootstrap Example</title>
+<title>Add State</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
@@ -76,6 +76,7 @@
 				</div>
 			</div>
 		</form>
+	
 	</div>
 
 </body>
