--- a/src/main/resources/templates/forms/login.html
+++ b/src/main/resources/templates/forms/login.html
@@ -65,9 +65,9 @@
 				<div class="col-sm-10">
 					<label class="control-label col-sm-2" for="login"></label>
 					<button type="submit" class="btn btn-primary">Sign In</button>
-					<a th:href="@{/admin/register}"
+					<!-- <a th:href="@{/admin/register}"
 					   class= "to_register"
-					> Don't Have Account? <strong>Register</strong></a>
+					> Don't Have Account? <strong>Register</strong></a> -->
 				</div>
 			</div>
 		</form>
