--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 							<i class="fa fa-laptop"></i> Dashboard
 						</h3>
 						<ol class="breadcrumb">
-							<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
+							<li><i class="fa fa-home"></i><a th:href="@{/index}">Home</a></li>
 							<li><i class="fa fa-laptop"></i>Dashboard</li>
 						</ol>
 					</div>
@@ -76,8 +76,8 @@
 					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="info-box blue-bg">
 							<i class="fa fa-cloud-download"></i>
-							<div class="count">6.674</div>
-							<div class="title">Download</div>
+							<div class="count" th:text = "${usersCount}"></div>
+							<div class="title">Total Users</div>
 						</div>
 						<!--/.info-box-->
 					</div>
@@ -86,31 +86,22 @@
 					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="info-box brown-bg">
 							<i class="fa fa-shopping-cart"></i>
-							<div class="count">7.538</div>
-							<div class="title">Purchased</div>
+							<div class="count" th:text= "${postsCount}"></div>
+							<div class="title">Total Posts</div>
 						</div>
 						<!--/.info-box-->
 					</div>
 					<!--/.col-->
-
-					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-						<div class="info-box dark-bg">
-							<i class="fa fa-thumbs-o-up"></i>
-							<div class="count">4.362</div>
-							<div class="title">Order</div>
-						</div>
-						<!--/.info-box-->
-					</div>
 					<!--/.col-->
 
-					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+				<!-- 	<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 						<div class="info-box green-bg">
 							<i class="fa fa-cubes"></i>
 							<div class="count">1.426</div>
 							<div class="title">Stock</div>
 						</div>
-						<!--/.info-box-->
-					</div>
+						/.info-box
+					</div> -->
 					<!--/.col-->
 
 				</div>
