--- a/src/main/resources/templates/sidebar/sidebar.html
+++ b/src/main/resources/templates/sidebar/sidebar.html
@@ -50,28 +50,30 @@
 			<div id="sidebar" class="nav-collapse ">
 				<!-- sidebar menu start-->
 				<ul class="sidebar-menu">
-					<li class="active"><a class="" th:href ="@{/admin}"> <i
+					<li class="active">
+					   <a class="" th:href ="@{/admin}"> <i
 							class="icon_house_alt"></i> <span>Dashboard</span>
-					</a></li>
+					   </a>
+					</li>
 						
-					<li class="sub-menu"><a href="javascript:;" class=""> <i
+					<li class="sub-menu">
+					   <a href="javascript:;" class=""> <i
 							class="icon_desktop"></i> <span>Activities</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
-					</a>
+					   </a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/posts}">Posts</a></li>
+							<li><a class="" th:href = "@{/posts}">See Posts</a></li>
 						</ul>
 					</li>
 
-					<!-- <li class="sub-menu"><a href="javascript:;" class=""> <i
+					<li class="sub-menu"><a href="javascript:;" class=""> <i
 							class="icon_table"></i> <span>Accounts</span> <span
 							class="menu-arrow arrow_carrot-right"></span>
 					</a>
 						<ul class="sub">
-							<li><a class="" th:href = "@{/admin/invoices}">Invoices</a></li>
-							<li><a class="" th:href = "@{/admin/invoicestatus}">Invoices Status Values</a></li>
+							<li><a class="" th:href = "@{/admin/register}">Add Admin</a></li>
 						</ul>
-					</li> -->
+					</li>
 
 					<li class="sub-menu"><a href="javascript:;" class=""> <i
 							class="icon_table"></i> <span>Globals</span> <span
