--- a/src/main/resources/templates/forms/PostForm.html
+++ b/src/main/resources/templates/forms/PostForm.html
@@ -14,9 +14,15 @@
    <div class="jumbotron">
        <h1>Create One more Post</h1>  
    </div> 
-   <h2>Save State</h2>
-		<form class="form-horizontal" th:object="${post}"
-			th:action="@{/posts/addNew}" method="post">
+   <h2 style = "color : orange; 
+                border-bottom : 2px solid green; 
+                width : 18%;
+                margin : auto;
+                margin-bottom : 10px;">Add a new post</h2>
+		<form 
+		    class="form-horizontal" th:object="${post}"
+			th:action="@{/posts/addNew}" method="post"
+			enctype="multipart/form-data">
 
 			<!-- hidden input id -->
 			<input type="hidden" readonly th:field="*{id}" class="form-control" name="id"
@@ -33,8 +39,11 @@
 			<div class="form-group">
 				<label class="control-label col-sm-2" for="code">Photo URL:</label>
 				<div class="col-sm-10">
-					<input type="text" required th:field="*{photoURL}" class="form-control"
-						name="photoURL" id="photoURL">
+					<input 
+					       type="text" 
+					       accept="image/png, image/jpeg"
+					       required th:field="*{photoURL}" class="form-control"
+						   name="photoURL" id="photoURL">
 				</div>
 			</div>
 
