--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,7 +115,7 @@
 						</div>
 							<div>
 								<div
-									style="background-image: url('img/car.jpg'); background-size: 100% 100%; height: 400px;">
+									style="background-image: url('img/bg.jpg'); background-size: 100% 100%; height: 400px;">
 								</div>
 							</div>
 
